Remove images + photodoc method findfirstimageview